chore: temp. drop korean from build and deployments

--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -15,7 +15,8 @@ jobs:
       matrix:
         node-version: [18.x]
         languages:
-          [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
+          # [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
+          [chinese, espanol, italian, japanese, portuguese, ukrainian]
         site_tlds: [org, dev]
 
     env:
@@ -185,7 +186,8 @@ jobs:
       fail-fast: false
       matrix:
         languages:
-          [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
+          # [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
+          [chinese, espanol, italian, japanese, portuguese, ukrainian]
         site_tlds: [org]
 
     # GitHub's deployment environment configuration.
