--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -15,8 +15,7 @@ jobs:
       matrix:
         node-version: [18.x]
         languages:
-          # [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
-          [chinese, espanol, italian, japanese, portuguese, ukrainian]
+          [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
         site_tlds: [org, dev]
 
     env:
@@ -186,8 +185,7 @@ jobs:
       fail-fast: false
       matrix:
         languages:
-          # [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
-          [chinese, espanol, italian, japanese, portuguese, ukrainian]
+          [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
         site_tlds: [org]
 
     # GitHub's deployment environment configuration.
