--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: [18.x]
         languages:
           [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
-        site_tlds: [org, dev]
+        site_tlds: [org]
 
     env:
       BUILD_LANG: ${{ matrix.languages }}
