--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -3,7 +3,16 @@ name: i18n - Build and Deploy
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0/6 * * *' # Build once every six hours
+    # Here are the times for the cron:
+    #
+    # Sun, Mon, Tue, Thu, Fri : at 00:00, 06:00, 12:00, 18:00 UTC
+    # Wed, Sat                : at 00:00, 06:00, --:--, 18:00 UTC
+    #
+    # There is a 6 hour maintenance window on Wednesdays and Saturdays,
+    # and the crons are scheduled at 5 mins past the hour.
+    #
+    - cron: '5 0,6,12,18 * * 0-2,4-5'
+    - cron: '5 0,6,18 * * 3,6'
 
 jobs:
   build:
