--- a/.github/workflows/docr-cleanup.yml
+++ b/.github/workflows/docr-cleanup.yml
@@ -2,7 +2,7 @@ name: DOCR - Garbage Collection
 on:
   workflow_dispatch:
   schedule:
-    - cron: '45 2 * * 6'
+    - cron: '5 12 * * 3,6' # 12:05 UTC on Wednesdays and Saturdays (6 hour maintenance window)
 
 jobs:
   clean:
