--- a/.github/workflows/docr-cleanup.yml
+++ b/.github/workflows/docr-cleanup.yml
@@ -1,14 +1,52 @@
-name: DOCR - Garbage Collection
+name: DOCR - Cleanup Conatiner Images
 on:
   workflow_dispatch:
   schedule:
-    - cron: '5 12 * * 3,6' # 12:05 UTC on Wednesdays and Saturdays (6 hour maintenance window)
+    - cron: '5 0 * * 3,6' # 12:05 UTC on Wednesdays and Saturdays (6 hour maintenance window)
 
 jobs:
-  clean:
-    name: Garbage Collection
+  remove:
+    name: Delete Old Images
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        repos:
+          - english
+          - chinese
+          - espanol
+          - italian
+          - japanese
+          - korean
+          - portuguese
+          - ukrainian
+        variants:
+          - dev
+          - org
+        # Exclude the following combinations
+        exclude:
+          - repos: english
+            variants: dev
 
+    steps:
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+      - name: Log in to DigitalOcean Container Registry with short-lived credentials
+        run: doctl registry login --expiry-seconds 1200
+
+      - name: Delete Images
+        uses: raisedadead/action-docr-cleanup@latest
+        with:
+          repository_name: '${{ matrix.variants }}/news-${{ matrix.repos }}'
+          days: '4'
+
+  clean:
+    name: Do Garbage Collection
+    runs-on: ubuntu-latest
+    needs: remove
     steps:
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
