--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-plugin-ghost": "3.4.0",
     "eslint-utils": "3.0.0",
     "graceful-fs": "4.2.11",
+    "graphql-request": "^6.1.0",
     "husky": "9.0.11",
     "i18next": "23.8.1",
     "i18next-fs-backend": "2.3.1",
