--- a/sample.env
+++ b/sample.env
@@ -47,6 +47,13 @@ URDU_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 URDU_GHOST_API_VERSION=v{major}.{minor}
 
 # ---------------------
+# Hashnode API
+# ---------------------
+
+HASHNODE_API_URL='gql.hashnode.com'
+ENGLISH_HASHNODE_HOST=
+
+# ---------------------
 # Search
 # ---------------------
 
