debug: self-hosted CI

--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -24,7 +24,8 @@ jobs:
       matrix:
         node-version: [18.x]
         languages:
-          [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
+          # [chinese, espanol, italian, japanese, korean, portuguese, ukrainian]
+          [italian]
         site_tlds: [org]
 
     env:
