--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "https://github.com/freeCodeCamp/news/graphs/contributors"
   ],
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "@tryghost/content-api": "1.11.20",
     "@tryghost/helpers": "1.1.89",
