fix: add default for hashnode env var

--- a/sample.env
+++ b/sample.env
@@ -50,8 +50,8 @@ URDU_GHOST_API_VERSION=v{major}.{minor}
 # Hashnode API
 # ---------------------
 
-HASHNODE_API_URL='gql.hashnode.com'
-ENGLISH_HASHNODE_HOST=
+HASHNODE_API_URL=api_url_from_hashnode_dashboard
+ENGLISH_HASHNODE_HOST=host_from_hashnode_dashboard
 
 # ---------------------
 # Search
