feat: ping editorial team on Google Chat about dupe posts

--- a/sample.env
+++ b/sample.env
@@ -68,6 +68,13 @@ ADS_ENABLED=true
 GOOGLE_ADSENSE_DATA_AD_CLIENT=ca-pub-1234567890
 GOOGLE_ADSENSE_DATA_AD_SLOT=1234567890
 
+# ---------------------------------
+# Google Chat credentials
+# ---------------------------------
+
+CHAT_WEBHOOK_KEY=chat_webhook_key_from_space_settings
+CHAT_WEBHOOK_TOKEN=chat_webhook_token_from_space_settings
+
 # ---------------------
 # Pagination
 # ---------------------
