feat: hashnode integration (#829)
Co-authored-by: sidemt <25644062+sidemt@users.noreply.github.com>
Co-authored-by: scissorsneedfoodtoo <scissorsneedfoodtoo@gmail.com>

--- a/sample.env
+++ b/sample.env
@@ -47,6 +47,13 @@ URDU_GHOST_CONTENT_API_KEY=api_key_from_ghost_dashboard
 URDU_GHOST_API_VERSION=v{major}.{minor}
 
 # ---------------------
+# Hashnode API
+# ---------------------
+
+HASHNODE_API_URL=api_url_from_hashnode_dashboard
+ENGLISH_HASHNODE_HOST=host_from_hashnode_dashboard
+
+# ---------------------
 # Search
 # ---------------------
 
@@ -60,6 +67,13 @@ ALGOLIA_API_KEY=api_key_from_algolia_dashboard
 ADS_ENABLED=true
 GOOGLE_ADSENSE_DATA_AD_CLIENT=ca-pub-1234567890
 GOOGLE_ADSENSE_DATA_AD_SLOT=1234567890
+
+# ---------------------------------
+# Google Chat credentials
+# ---------------------------------
+
+CHAT_WEBHOOK_KEY=chat_webhook_key_from_space_settings
+CHAT_WEBHOOK_TOKEN=chat_webhook_token_from_space_settings
 
 # ---------------------
 # Pagination
