--- a/docker/test/dev/docker-compose.yml
+++ b/docker/test/dev/docker-compose.yml
@@ -3,15 +3,15 @@ services:
   mock-web:
     image: nginx
     volumes:
-      - ../mock-www/html:/usr/share/nginx/html
-      - ../mock-www/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./html:/usr/share/nginx/html
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - '80:80'
     depends_on:
       - news
   news:
     build:
-      context: ../
+      context: ../../../
       dockerfile: ./docker/Dockerfile
     ports:
       - '3000:3000'
