--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
     "build:ci": "cross-env ELEVENTY_ENV=ci eleventy",
     "postbuild": "node ./config/i18n/generate-serve-config.js",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "npm-run-all lint:*",
     "lint:code": "eslint . --ext .js --cache",
     "lint:i18n-schema": "node ./config/i18n/schema-validation.js",
@@ -67,6 +67,7 @@
   "devDependencies": {
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-plugin-rss": "1.2.0",
+    "@extractus/oembed-extractor": "4.0.5",
     "@tryghost/content-api": "1.11.21",
     "@tryghost/helpers": "1.1.90",
     "algoliasearch": "4.23.3",
