fix: hashnode embeds (#885)

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
     "build:ci": "cross-env ELEVENTY_ENV=ci eleventy",
     "postbuild": "node ./config/i18n/generate-serve-config.js",
-    "test": "jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "npm-run-all lint:*",
     "lint:code": "eslint . --ext .js --cache",
     "lint:i18n-schema": "node ./config/i18n/schema-validation.js",
@@ -80,6 +80,7 @@
     "eslint-plugin-cypress": "2.15.2",
     "eslint-plugin-ghost": "3.4.0",
     "eslint-utils": "3.0.0",
+    "get-video-id": "4.1.5",
     "graceful-fs": "4.2.11",
     "graphql-request": "^6.1.0",
     "husky": "9.0.11",
