--- a/.github/workflows/deploy-i18n.yml
+++ b/.github/workflows/deploy-i18n.yml
@@ -120,8 +120,8 @@ jobs:
           docker push registry.digitalocean.com/${{ secrets.DOCR_NAME }}/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:$tagname
           docker push registry.digitalocean.com/${{ secrets.DOCR_NAME }}/${{ matrix.site_tlds }}/news-${{ matrix.languages }}:latest
 
-      - name: Clean up Self-hosted setup
-        uses: colpal/actions-clean@36e6ca1abd35efe61cb60f912bd7837f67887c8a # tag=v1
-        if: ${{ always() }} # To ensure this step runs even when earlier steps fail
+      # - name: Clean up Self-hosted setup
+      #   uses: colpal/actions-clean@36e6ca1abd35efe61cb60f912bd7837f67887c8a # tag=v1
+      #   if: ${{ always() }} # To ensure this step runs even when earlier steps fail
 
-# Deployments are automated via https://github.com/freeCodeCamp/news-config
+# Deployments are automated via https://github.com/freeCodeCamp/news-docker-swarm-config
