chore: disable cleanup of dev images

--- a/.github/workflows/docr-cleanup.yml
+++ b/.github/workflows/docr-cleanup.yml
@@ -21,7 +21,7 @@ jobs:
           - portuguese
           - ukrainian
         variants:
-          - dev
+          # - dev
           - org
         # Exclude the following combinations
         exclude:
