feat(ghost,hashnode): flags to debug and skip builds

--- a/sample.env
+++ b/sample.env
@@ -91,3 +91,6 @@ POSTS_PER_PAGE=25
 SITE_DOMAIN=localhost:8080
 LOCALE_FOR_UI=italian
 LOCALE_FOR_GHOST=italian
+
+# HASHNODE_DEBUG_MODE_FIRST_PAGE_ONLY=true
+# DO_NOT_FETCH_FROM_GHOST=true
