feat(ci): disable fetching posts from Ghost

--- a/.github/workflows/deploy-eng.yml
+++ b/.github/workflows/deploy-eng.yml
@@ -53,6 +53,8 @@ jobs:
       LOCALE_FOR_UI: ${{ matrix.languages }}
       LOCALE_FOR_GHOST: ${{ matrix.languages }}
 
+      DO_NOT_FETCH_FROM_GHOST: true
+
     steps:
       - name: Checkout source code
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
