--- a/.github/workflows/typescript-typecheck.yml
+++ b/.github/workflows/typescript-typecheck.yml
@@ -21,4 +21,4 @@ jobs:
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: pnpm run type-check
+      - run: npm run type-check
