Use the right package manager
Co-authored-by: Oliver Eyton-Williams <ojeytonwilliams@gmail.com>

--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
   "lint-staged": {
     "!(*.ts)": "prettier --write --ignore-unknown",
     "*.ts": [
-      "pnpm run type-check",
+      "npm run type-check",
       "prettier --write --ignore-unknown"
     ]
   }
