fix: add bash command to lint-staged script

--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
   "lint-staged": {
     "!(*.ts)": "prettier --write --ignore-unknown",
     "*.ts": [
-      "npm run type-check",
+      "bash -c 'npm run type-check'",
       "prettier --write --ignore-unknown"
     ]
   }
