--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "eslint-utils": "3.0.0",
     "get-video-id": "4.1.7",
     "graceful-fs": "4.2.11",
-    "graphql-request": "^6.1.0",
+    "graphql-request": "6.1.0",
     "husky": "9.1.5",
     "i18next": "23.15.1",
     "i18next-fs-backend": "2.3.2",
@@ -103,12 +103,12 @@
     "probe-image-size": "7.2.3",
     "shx": "0.3.4",
     "terser": "5.32.0",
-    "typescript": "^5.5.4"
+    "typescript": "5.5.4"
   },
   "lint-staged": {
     "!(*.ts)": "prettier --write --ignore-unknown",
     "*.ts": [
-      "npm run type-check",
+      "bash -c 'npm run type-check'",
       "prettier --write --ignore-unknown"
     ]
   }
