feat: run test workflow for English and Spanish builds

--- a/.github/workflows/node.js-test.yml
+++ b/.github/workflows/node.js-test.yml
@@ -41,6 +41,7 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x]
+        languages: [english, espanol]
 
     env:
       POSTS_PER_PAGE: ${{ secrets.POSTS_PER_PAGE }}
@@ -48,12 +49,14 @@ jobs:
       HASHNODE_API_URL: api_url_from_hashnode_dashboard
       ENGLISH_HASHNODE_HOST: host_from_hashnode_dashboard
 
+      ESPANOL_GHOST_API_URL: ${{ secrets.CI_ESPANOL_GHOST_API_URL }}
+      ESPANOL_GHOST_API_VERSION: ${{ secrets.CI_ESPANOL_GHOST_API_VERSION }}
+      ESPANOL_GHOST_CONTENT_API_KEY: ${{ secrets.CI_ESPANOL_GHOST_CONTENT_API_KEY }}
+
       SITE_DOMAIN: localhost:8080
 
-      DO_NOT_FETCH_FROM_GHOST: true
-
-      LOCALE_FOR_UI: english
-      LOCALE_FOR_GHOST: english
+      LOCALE_FOR_UI: ${{ matrix.languages }}
+      LOCALE_FOR_GHOST: ${{ matrix.languages }}
 
     steps:
       - name: Checkout source code
@@ -67,7 +70,20 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build English CI site
+      - name: Set fetch from Ghost environment variable
+        if: ${{ matrix.languages == 'english' }}
+        run: echo "DO_NOT_FETCH_FROM_GHOST=true" >> $GITHUB_ENV
+
+      - name: Start Espanol Ghost container
+        if: ${{ matrix.languages == 'espanol' }}
+        run: npm run start:containers --service espanol
+
+      - name: Sleep for 5 seconds
+        if: ${{ matrix.languages == 'espanol' }}
+        run: sleep 5s
+        shell: bash
+
+      - name: Build CI site
         run: npm run build:ci
 
       - name: Run tests
