--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
     "build:ci": "cross-env ELEVENTY_ENV=ci eleventy",
     "postbuild": "node ./config/i18n/generate-serve-config.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "cross-env ELEVENTY_ENV=ci NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "npm-run-all lint:*",
     "lint:code": "eslint . --ext .js --cache",
     "lint:i18n-schema": "node ./config/i18n/schema-validation.js",
