fix: stop Ghost container after Espanol tests

--- a/.github/workflows/node.js-test.yml
+++ b/.github/workflows/node.js-test.yml
@@ -91,3 +91,7 @@ jobs:
 
       - name: Perform Typescript Typecheck
         run: npm run type-check
+
+      - name: Stop Ghost containers
+        if: ${{ matrix.languages == 'espanol' }}
+        run: npm run stop:containers
