--- a/.github/workflows/no-forks.yml
+++ b/.github/workflows/no-forks.yml
@@ -5,7 +5,8 @@ on:
 
 jobs:
   no-forks:
-    runs-on: ubuntu-22.04
+    name: No-Forks
+    runs-on: ubuntu-latest
     steps:
       - name: Comment and Close
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
