--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@11ty/eleventy-plugin-rss": "1.2.0",
     "@tryghost/content-api": "1.11.21",
     "@tryghost/helpers": "1.1.90",
+    "@types/node": "22.5.5",
     "algoliasearch": "4.24.0",
     "clean-css": "5.3.3",
     "cross-env": "7.0.3",
