--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/e2e/espanol/**/*'",
     "cypress:watch": "npm run cypress -- open",
     "dev": "npm run develop",
-    "predevelop": "npm run clean",
+    "predevelop": "npm run clean && node ./tools/download-trending.js",
     "develop": "cross-env ELEVENTY_ENV=dev NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
-    "predevelop:ci": "npm run clean",
+    "predevelop:ci": "npm run clean && node ./tools/download-trending.js",
     "develop:ci": "cross-env ELEVENTY_ENV=ci NODE_OPTIONS=--max-old-space-size=8192 eleventy --serve",
-    "prebuild": "npm run clean",
+    "prebuild": "npm run clean && node ./tools/download-trending.js",
     "build": "cross-env ELEVENTY_ENV=prod NODE_OPTIONS=--max-old-space-size=8192 eleventy",
     "build:ci": "cross-env ELEVENTY_ENV=ci eleventy",
     "postbuild": "node ./config/i18n/generate-serve-config.js",
@@ -90,6 +90,7 @@
     "i18next-fs-backend": "2.6.0",
     "jest": "29.7.0",
     "jest-json-schema-extended": "1.0.1",
+    "joi": "17.13.3",
     "js-yaml": "4.1.0",
     "jsdom": "24.1.3",
     "libxmljs": "1.0.11",
