--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "husky": "9.1.7",
     "i18next": "23.16.8",
     "i18next-fs-backend": "2.6.0",
+    "image-size": "2.0.1",
     "jest": "29.7.0",
     "jest-json-schema-extended": "1.0.1",
     "joi": "17.13.3",
@@ -102,7 +103,6 @@
     "npm-run-all2": "7.0.2",
     "piscina": "4.9.2",
     "prettier": "3.4.2",
-    "probe-image-size": "7.2.3",
     "shx": "0.4.0",
     "terser": "5.39.0",
     "typescript": "5.8.2"
