--- a/package.json
+++ b/package.json
@@ -99,10 +99,11 @@
     "lodash": "4.17.21",
     "md5": "2.3.0",
     "node-cache": "5.1.2",
-    "node-fetch": "2.7.0",
+    "node-fetch": "3.3.2",
     "npm-run-all2": "7.0.2",
     "piscina": "4.9.2",
     "prettier": "3.4.2",
+    "probe-image-size": "7.2.3",
     "shx": "0.4.0",
     "terser": "5.39.0",
     "typescript": "5.8.2"
