--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "clean-css": "5.3.3",
     "cross-env": "7.0.3",
     "cypress": "13.17.0",
+    "cypress-localstorage-commands": "^2.2.7",
     "dayjs": "1.11.13",
     "dotenv": "16.5.0",
     "eslint": "8.57.1",
