--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -7,7 +7,9 @@
     "moduleDetection": "force",
     "module": "commonjs",
     "moduleResolution": "node",
-    "preserveValueImports": false
+    "preserveValueImports": false,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": ["**/*.ts"]
 }
