--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "postbuild": "node ./config/i18n/generate-serve-config.js",
     "test": "cross-env ELEVENTY_ENV=ci NODE_OPTIONS=--experimental-vm-modules jest",
     "lint": "npm-run-all lint:*",
-    "lint:code": "eslint . --ext .js --cache",
+    "lint:code": "eslint . --cache",
     "lint:i18n-schema": "node ./config/i18n/schema-validation.js",
     "lint:pretty": "prettier --check .",
     "format": "prettier --write .",
@@ -69,6 +69,8 @@
   "devDependencies": {
     "@11ty/eleventy": "3.1.1",
     "@11ty/eleventy-plugin-rss": "2.0.4",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.29.0",
     "@tryghost/content-api": "1.11.26",
     "@tryghost/helpers": "1.1.95",
     "@types/node": "22.15.12",
@@ -78,12 +80,12 @@
     "cypress": "13.17.0",
     "dayjs": "1.11.13",
     "dotenv": "16.5.0",
-    "eslint": "8.57.1",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-cypress": "2.15.2",
-    "eslint-plugin-ghost": "3.4.3",
+    "eslint": "9.29.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-plugin-cypress": "5.1.0",
     "eslint-utils": "3.0.0",
     "get-video-id": "4.1.7",
+    "globals": "16.2.0",
     "graceful-fs": "4.2.11",
     "graphql-request": "6.1.0",
     "husky": "9.1.7",
