--- a/package.json
+++ b/package.json
@@ -96,11 +96,13 @@
     "joi": "17.13.3",
     "js-yaml": "4.1.0",
     "jsdom": "24.1.3",
+    "libxmljs": "1.0.11",
     "lint-staged": "15.5.2",
     "lodash": "4.17.21",
     "md5": "2.3.0",
     "node-cache": "5.1.2",
     "node-fetch": "2.7.0",
+    "node-gyp": "11.2.0",
     "npm-run-all2": "7.0.2",
     "piscina": "4.9.2",
     "prettier": "3.6.0",
