feat: fetch data from multiple sources before build, use fcc-lang tag to separate posts by language on same host

--- a/sample.env
+++ b/sample.env
@@ -39,7 +39,22 @@ UKRAINIAN_GHOST_API_VERSION=v{major}.{minor}
 # ---------------------
 
 HASHNODE_API_URL=api_url_from_hashnode_dashboard
+
 ENGLISH_HASHNODE_HOST=host_from_hashnode_dashboard
+
+CHINESE_HASHNODE_HOST=host_from_hashnode_dashboard
+
+ESPANOL_HASHNODE_HOST=host_from_hashnode_dashboard
+
+PORTUGUESE_HASHNODE_HOST=host_from_hashnode_dashboard
+
+ITALIAN_HASHNODE_HOST=host_from_hashnode_dashboard
+
+JAPANESE_HASHNODE_HOST=host_from_hashnode_dashboard
+
+KOREAN_HASHNODE_HOST=host_from_hashnode_dashboard
+
+UKRAINIAN_HASHNODE_HOST=host_from_hashnode_dashboard
 
 # ---------------------
 # Search
