fix: separate mock hashnode posts and pages by locale, add mock content for japanese and korean, add new ci scripts, prep for ghost and hashnode sourced tests

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start:ci:english": "LOCALE_FOR_UI=english DO_NOT_FETCH_FROM_GHOST=true npm run develop:ci",
     "start:ci:chinese": "LOCALE_FOR_UI=chinese LOCALE_FOR_GHOST=chinese npm run develop:ci",
     "start:ci:espanol": "LOCALE_FOR_UI=espanol LOCALE_FOR_GHOST=espanol npm run develop:ci",
+    "start:ci:japanese": "LOCALE_FOR_UI=japanese DO_NOT_FETCH_FROM_GHOST=true npm run develop:ci",
+    "start:ci:korean": "LOCALE_FOR_UI=korean DO_NOT_FETCH_FROM_GHOST=true npm run develop:ci",
     "start:containers": "docker compose -f './docker/ghost/docker-compose.yml' up -d",
     "stop:containers": "docker compose -f './docker/ghost/docker-compose.yml' down",
     "clean": "npm-run-all -p clean:*",
@@ -22,6 +24,8 @@
     "cypress:run:english": "npm run cypress -- run --spec 'cypress/e2e/english/**/*'",
     "cypress:run:chinese": "npm run cypress -- run --spec 'cypress/e2e/chinese/**/*'",
     "cypress:run:espanol": "npm run cypress -- run --spec 'cypress/e2e/espanol/**/*'",
+    "cypress:run:japanese": "npm run cypress -- run --spec 'cypress/e2e/japanese/**/*'",
+    "cypress:run:korean": "npm run cypress -- run --spec 'cypress/e2e/espanol/**/*'",
     "cypress:watch": "npm run cypress -- open",
     "dev": "npm run develop",
     "predevelop": "npm run clean && node ./tools/download-trending.js",
